[gd_scene load_steps=4 format=2]

[ext_resource path="res://Image_Imports/PaperPlane.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PaperPlane.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
build_mode = 1
polygon = PoolVector2Array( -27, 10, -3, -15, 27, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Reload" type="Timer" parent="."]
wait_time = 2.0

[node name="Switch" type="Timer" parent="."]
wait_time = 6.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="timeout" from="Switch" to="." method="_on_Switch_timeout"]
